<resources>
    <string name="app_name">V-Plan PRS</string>
    <string name="action_settings">Einstellungen</string>
    <string name="MainActivityName">V-Plan PRS</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_first_start">FirstStartActivity</string>

    <!-- Shared Preferences Values-->
    <string name="settingUpdateBool">settingUpdateBool</string>
    <string name="settingClassName">settingClassName</string>
    <string name="settingFirstStart">"settingFirstStart"</string>
    <string name="settingHTMLStorage">"settingHTMLStorage"</string>


    <string name="stufen_default">Choose a country</string>
    <string-array name="stufen_arrays">
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item></item>
    </string-array>

    <string name="klasse_default">Choose a country</string>
    <string-array name="klasse_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string name="zweig_default">Choose a country</string>
    <string-array name="zweig_arrays">
        <item>G</item>
        <item>F</item>
        <item>R</item>
        <item>H</item>
        <item>E</item>
        <item>ET</item>
        <item>Q</item>
    </string-array>

    <string name="shortcut_heute_long">Vertretungsplan heute</string>
    <string name="shortcut_heute_short">V-Plan heute</string>
    <string name="shortcut_heute_disabled">heute deaktiviert</string>

    <string name="shortcut_morgen_long">Vertretungsplan morgen</string>
    <string name="shortcut_morgen_short">V-Plan morgen</string>
    <string name="shortcut_morgen_disabled">morgen deaktiviert</string>

    <string name="shortcut_busfahrplan_long">Busfahrplan</string>
    <string name="shortcut_busfahrplan_short">Bus</string>
    <string name="shortcut_busfahrplan_disabled">Busfahrplan deaktiviert</string>

    <string name="shortcut_stundenplan_long">Stundenplan</string>
    <string name="shortcut_stundenplan_short">Std.plan</string>
    <string name="shortcut_stundenplan_disabled">Stundenplan deaktiviert</string>

</resources>
