<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="20dp"
        android:text="Bitte gib Deine neue Klasse an:"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="2dp"
        android:background="#c4c4c4"
        android:elevation="2dp"
        android:padding="2dp">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="#FAFAFA"
            android:entries="@array/stufen_arrays"
            android:prompt="@string/stufen_default" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="#FAFAFA"
            android:entries="@array/zweig_arrays"
            android:prompt="@string/zweig_default" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="#FAFAFA"
            android:entries="@array/klasse_arrays"
            android:prompt="@string/klasse_default" />


    </LinearLayout>


</LinearLayout>